Fix element alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ body {
   height: 100vh;
   width: 100vw;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .App {
@@ -15,7 +16,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: .5rem;
+    padding: .5rem 1rem;
     background-color: $primaryColor;
 
     .hidden-mobile {
@@ -29,6 +30,10 @@ body {
     }
 
     div {
+      height: 1.5rem;
+      line-height: 1.5rem;
+      vertical-align: middle;
+
       &:nth-child(1) {
         width: 70%;
         display: inline-flex;
@@ -40,6 +45,7 @@ body {
         border: 2px solid $secondaryColor;
         background-color: transparent;
         color: $textColor;
+        padding: 5px;
 
         &::placeholder {
           color: $textColor;
